<resources>
    <string name="app_name">My Application</string>
    <string name="app_version">1.0.1</string>
    <string name="Button_name">login</string>
    <string name="hint_username">e—mail</string>
    <string name="hint_password">password</string>
    <string name="hint_confirmpassword">confirm your password</string>
    <string name="page_name">Register</string>
    <string name="welcome_name">Welcome to EOApp!</string>
    <string name="string1">forgot password?</string>
    <string name="string2">change login method</string>
    <string name="Switch">Accounts</string>

</resources>